--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -1,4 +1,15 @@
 // app global css in Sass form
+*
+  font-family: Avenir,Helvetica,Arial,sans-serif
+
+@font-face
+  font-family: header
+  src: url(./fonts/Lobster/Lobster-Regular.ttf)
+.header, h3, h5
+  font-family: 'header'
+  margin-top: 0
+
+
 .app-container
   max-width: 1439px
   margin: 0 auto
